--- a/bin/index.html
+++ b/bin/index.html
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿<?php include("password_protect.php"); ?>
+<!DOCTYPE html>
 <html>
 <head>
 	<title>Cardinal Quest Alpha 0.2</title>
