added text to website

--- a/website/index.html
+++ b/website/index.html
@@ -75,7 +75,26 @@
 			   </div>
 			</div>
 		   <div id="descr">
-			Cardinal Quest is finally in beta and you we are offering a discount price for the beta plus you will recieve the final version once its released. 
+
+			<p>	
+			<i>Cardinal Quest<i> is an arcade-style dungeon-crawler inspired by 1980s classics such as Gauntlet, Red-Box D&D and Golden Axe: Choose your champion and begin your quest to slay the Evil Minotaur!
+
+			<p>
+			Three distinct characters await you, each providing their own unique experience:
+
+			<ul>
+				<li>The fierce <i>Fighter</i>, who can stir himself into a berserk frenzy.</li>
+				<li>The stealthy <i>Thief</i>, a mysterious assassin who dispatches his foes from the shadows.</li>
+				<li>The mystical <i>Wizard</i>, able to bend the forces of the elements to his will.</li>
+			</ul>
+
+			<i>Cardinal Quest</i> now in <b>public beta</b>!
+			
+			<ul>
+				<li>Get the full game on Windows, Mac and Linux for half price ($5 instead of $10)!</li>
+				<li>Play the beta <i>right now</i> and help affect the game's development!</li>
+			</ul>
+			
 		   </div>
 		  </div>
    </div>
