some layout fixes + default video size

--- a/website/index.html
+++ b/website/index.html
@@ -9,7 +9,6 @@
 	<link rel="stylesheet" type="text/css" href="css/reset.css" />
 	<link rel="stylesheet" type="text/css" href="css/gallery.css" />
 	<link rel="stylesheet" type="text/css" href="css/CqStyle.css" />
-	<script src="js/jquery.js" type="text/javascript"></script>
 </head>
 <body>
 	<div id="page">
@@ -17,7 +16,7 @@
 		   <div id="logo"><img width="100%" src="rsrc/logo.png" alt="Cardinal Quest" /></div>
 		   <div id="leftContainer">
 			   <div id="vid">
-					<iframe width="415" height="400" src="http://www.youtube.com/embed/BWCoE8aXgks" frameborder="0"></iframe>
+					<iframe width="425" height="349" src="http://www.youtube.com/embed/BWCoE8aXgks" frameborder="0" allowfullscreen></iframe>
 			   </div>
 			   
 			   <div id="slides">
@@ -99,7 +98,7 @@
 		</div>
    </div>
    
-   <script type="text/javascript" src="js/compressed.js"></script>
+	<script type="text/javascript" src="js/compressed.js"></script>
 	<script type="text/javascript">
 		$('slideshow').style.display='none';
 		$('wrapper').style.display='block';
