--- a/website/index.html
+++ b/website/index.html
@@ -76,9 +76,8 @@
 
 				<p>	
 				<span>Cardinal Quest</span> is an arcade-style dungeon-crawler inspired by 1980s classics such as Gauntlet, Red-Box D&amp;D and Golden Axe: Choose your champion and begin your quest to slay the Evil Minotaur!
-
 				</p>
-				Three distinct characters await you, each providing their own unique experience:
+				<p>Three distinct characters await you, each providing their own unique experience:</p>
 
 				<ul>
 					<li>The fierce <span>Fighter</span>, who can stir himself into a berserk frenzy.</li>
@@ -86,7 +85,7 @@
 					<li>The mystical <span>Wizard</span>, able to bend the forces of the elements to his will.</li>
 				</ul>
 
-				<span>Cardinal Quest</span> now in <b>public beta</b>!
+				<p><span>Cardinal Quest</span> now in <b>public beta</b>!</p>
 				
 				<ul>
 					<li>Get the full game on Windows, Mac and Linux for half price ($5 instead of $10)!</li>
