fixed cloudfront + gallery shows correctly on firefox

--- a/website/index.html
+++ b/website/index.html
@@ -22,32 +22,32 @@
 			   <div id="slides">
 				   
 					<ul id="slideshow">
-						<li><h3></h3><p></p><span>photos/pic (32).png</span>
-							<img src="http://d12dnsmfbcrswq.cloudfront.net/photos_thumbs/pic (32).png" alt="Cardinal Quest Screenshots" /></li>
-						<li><h3></h3><p></p><span>photos/pic (15).png</span>
-							<img src="http://d12dnsmfbcrswq.cloudfront.net/photos_thumbs/pic (15).png" alt="Cardinal Quest Screenshots" /></li>
-						<li><h3></h3><p></p><span>photos/pic (11).png</span>
-							<img src="http://d12dnsmfbcrswq.cloudfront.net/photos_thumbs/pic (11).png" alt="Cardinal Quest Screenshots" /></li>
-						<li><h3></h3><p></p><span>photos/pic (23).png</span>
-							<img src="http://d12dnsmfbcrswq.cloudfront.net/photos_thumbs/pic (23).png" alt="Cardinal Quest Screenshots" /></li>
-						<li><h3></h3><p></p><span>photos/pic (26).png</span>
-							<img src="http://d12dnsmfbcrswq.cloudfront.net/photos_thumbs/pic (26).png" alt="Cardinal Quest Screenshots" /></li>
-						<li><h3></h3><p></p><span>photos/pic (18).png</span>
-							<img src="http://d12dnsmfbcrswq.cloudfront.net/photos_thumbs/pic (18).png" alt="Cardinal Quest Screenshots" /></li>
-						<li><h3></h3><p></p><span>photos/pic (15).png</span>
-							<img src="http://d12dnsmfbcrswq.cloudfront.net/photos_thumbs/pic (15).png" alt="Cardinal Quest Screenshots" /></li>
-						<li><h3></h3><p></p><span>photos/pic (30).png</span>
-							<img src="http://d12dnsmfbcrswq.cloudfront.net/photos_thumbs/pic (30).png" alt="Cardinal Quest Screenshots" /></li>
-						<li><h3></h3><p></p><span>photos/pic (12).png</span>
-							<img src="http://d12dnsmfbcrswq.cloudfront.net/photos_thumbs/pic (12).png" alt="Cardinal Quest Screenshots" /></li>
-						<li><h3></h3><p></p><span>photos/pic (25).png</span>
-							<img src="http://d12dnsmfbcrswq.cloudfront.net/photos_thumbs/pic (25).png" alt="Cardinal Quest Screenshots" /></li>
-						<li><h3></h3><p></p><span>photos/pic (16).png</span>
-							<img src="http://d12dnsmfbcrswq.cloudfront.net/photos_thumbs/pic (16).png" alt="Cardinal Quest Screenshots" /></li>
-						<li><h3></h3><p></p><span>photos/pic (17).png</span>
-							<img src="http://d12dnsmfbcrswq.cloudfront.net/photos_thumbs/pic (17).png" alt="Cardinal Quest Screenshots" /></li>
-						<li><h3></h3><p></p><span>photos/pic (22).png</span>
-							<img src="http://d12dnsmfbcrswq.cloudfront.net/photos_thumbs/pic (22).png" alt="Cardinal Quest Screenshots" /></li>
+						<li><h3></h3><p></p><span>http://d12dnsmfbcrswq.cloudfront.net/photos/pic (32).png</span>
+							<img src="http://d12dnsmfbcrswq.cloudfront.net/photos_thumbs/pic%20(32).png" alt="Cardinal Quest Screenshots" /></li>
+						<li><h3></h3><p></p><span>http://d12dnsmfbcrswq.cloudfront.net/photos/pic (15).png</span>
+							<img src="http://d12dnsmfbcrswq.cloudfront.net/photos_thumbs/pic%20(15).png" alt="Cardinal Quest Screenshots" /></li>
+						<li><h3></h3><p></p><span>http://d12dnsmfbcrswq.cloudfront.net/photos/pic (11).png</span>
+							<img src="http://d12dnsmfbcrswq.cloudfront.net/photos_thumbs/pic%20(11).png" alt="Cardinal Quest Screenshots" /></li>
+						<li><h3></h3><p></p><span>http://d12dnsmfbcrswq.cloudfront.net/photos/pic (23).png</span>
+							<img src="http://d12dnsmfbcrswq.cloudfront.net/photos_thumbs/pic%20(23).png" alt="Cardinal Quest Screenshots" /></li>
+						<li><h3></h3><p></p><span>http://d12dnsmfbcrswq.cloudfront.net/photos/pic (26).png</span>
+							<img src="http://d12dnsmfbcrswq.cloudfront.net/photos_thumbs/pic%20(26).png" alt="Cardinal Quest Screenshots" /></li>
+						<li><h3></h3><p></p><span>http://d12dnsmfbcrswq.cloudfront.net/photos/pic (18).png</span>
+							<img src="http://d12dnsmfbcrswq.cloudfront.net/photos_thumbs/pic%20(18).png" alt="Cardinal Quest Screenshots" /></li>
+						<li><h3></h3><p></p><span>http://d12dnsmfbcrswq.cloudfront.net/photos/pic (15).png</span>
+							<img src="http://d12dnsmfbcrswq.cloudfront.net/photos_thumbs/pic%20(15).png" alt="Cardinal Quest Screenshots" /></li>
+						<li><h3></h3><p></p><span>http://d12dnsmfbcrswq.cloudfront.net/photos/pic (30).png</span>
+							<img src="http://d12dnsmfbcrswq.cloudfront.net/photos_thumbs/pic%20(30).png" alt="Cardinal Quest Screenshots" /></li>
+						<li><h3></h3><p></p><span>http://d12dnsmfbcrswq.cloudfront.net/photos/pic (12).png</span>
+							<img src="http://d12dnsmfbcrswq.cloudfront.net/photos_thumbs/pic%20(12).png" alt="Cardinal Quest Screenshots" /></li>
+						<li><h3></h3><p></p><span>http://d12dnsmfbcrswq.cloudfront.net/photos/pic (25).png</span>
+							<img src="http://d12dnsmfbcrswq.cloudfront.net/photos_thumbs/pic%20(25).png" alt="Cardinal Quest Screenshots" /></li>
+						<li><h3></h3><p></p><span>http://d12dnsmfbcrswq.cloudfront.net/photos/pic (16).png</span>
+							<img src="http://d12dnsmfbcrswq.cloudfront.net/photos_thumbs/pic%20(16).png" alt="Cardinal Quest Screenshots" /></li>
+						<li><h3></h3><p></p><span>http://d12dnsmfbcrswq.cloudfront.net/photos/pic (17).png</span>
+							<img src="http://d12dnsmfbcrswq.cloudfront.net/photos_thumbs/pic%20(17).png" alt="Cardinal Quest Screenshots" /></li>
+						<li><h3></h3><p></p><span>http://d12dnsmfbcrswq.cloudfront.net/photos/pic (22).png</span>
+							<img src="http://d12dnsmfbcrswq.cloudfront.net/photos_thumbs/pic%20(22).png" alt="Cardinal Quest Screenshots" /></li>
 					</ul>
 					<div id="wrapper">
 						<div id="fullsize">
