--- a/website/index.html
+++ b/website/index.html
@@ -85,10 +85,9 @@
 					<li><span class="dc"><span class="fl">T</span>he <span class="fl">m</span>ystical <span class="fl">W</span>izard</span>, able to bend the forces of the elements to his will.</li>
 				</ul>
 				<div id="teaser"><img width="320px" src="http://d12dnsmfbcrswq.cloudfront.net/rsrc/teaser.png" alt="Uh oh..." /></div>
-				<p><span class="dc"><span class="fl">C</span></span><span class="dc">ardinal <span class="fl">Q</span></span><span class="dc">uest</span> now in <b>public beta</b>!</p>
-				<ul>
-					<li>Get the full game on Windows, Mac and Linux <a href="http://www.littleindie.net/jade.php?showpage=cardinalquest">for only 6.95 Euros (about $10)!</a></li>
-				</ul>
+				<p><span class="dc"><span class="fl">C</span></span><span class="dc">ardinal <span class="fl">Q</span></span><span class="dc">uest</span> now in <b>available</b>!</p>
+					<p>Get the full game for only 6.95 Euros from <a href="http://www.littleindie.net/jade.php?showpage=cardinalquest">LittleIndie</a>!</p>
+<i>Cardinal Quest also runs on Mac and Linux - these versions will soon be available for download as well.</i>
 		   </div>
 		</div>
    </div>
