more website text changes

--- a/website/index.html
+++ b/website/index.html
@@ -77,12 +77,14 @@
 				<p>	
 				<span class="dc"><span class="fl">C</span></span><span class="dc">ardinal <span class="fl">Q</span></span><span class="dc">uest</span> is an arcade-style dungeon-crawler inspired by 1980s classics such as Gauntlet, Red-Box D&amp;D and Golden Axe: Choose your champion and begin your quest to slay the Evil Minotaur!
 				</p>
+
+<p  style="text-align:center"><a  href="http://www.littleindie.net/jade.php?showpage=cardinalquest">Buy Now!</a></p>
 				<p>Three distinct characters await you, each providing their own unique experience:</p>
 
 				<ul>
-					<li><span class="dc"><span class="fl">T</span>he <span class="fl">f</span>ierce   <span class="fl">F</span>ighter</span>, who can stir himself into a berserk frenzy.</li>
-					<li><span class="dc"><span class="fl">T</span>he <span class="fl">s</span>tealthy <span class="fl">T</span>hief</span>, a mysterious assassin who dispatches his foes from the shadows.</li>
-					<li><span class="dc"><span class="fl">T</span>he <span class="fl">m</span>ystical <span class="fl">W</span>izard</span>, able to bend the forces of the elements to his will.</li>
+					<li><span class="dc"><span class="fl">T</span>he <span class="fl">F</span>ierce   <span class="fl">F</span>ighter</span> - who can stir himself into a berserk frenzy.</li>
+					<li><span class="dc"><span class="fl">T</span>he <span class="fl">S</span>tealthy <span class="fl">T</span>hief</span> - a mysterious assassin who dispatches his foes from the shadows.</li>
+					<li><span class="dc"><span class="fl">T</span>he <span class="fl">M</span>ystical <span class="fl">W</span>izard</span> - able to bend the forces of the elements to his will.</li>
 				</ul>
 				<div id="teaser"><img width="320px" src="http://d12dnsmfbcrswq.cloudfront.net/rsrc/teaser.png" alt="Uh oh..." /></div>
 				<p><span class="dc"><span class="fl">C</span></span><span class="dc">ardinal <span class="fl">Q</span></span><span class="dc">uest</span> now in <b>available</b>!</p>
