more website changes

--- a/website/index.html
+++ b/website/index.html
@@ -1,11 +1,9 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html>
 <head>
 	<title>Cardinal Quest</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta name="language" content="en" />
-	<meta name="description" content="" />
-	<meta name="keywords" content="" />
+	<meta name="keywords" content="dungeon-crawl roguelike 8bit retro" />
 	<link rel="stylesheet" type="text/css" href="css/reset.css" />
 	<link rel="stylesheet" type="text/css" href="css/gallery.css" />
 	<link rel="stylesheet" type="text/css" href="css/CqStyle.css" />
@@ -86,9 +84,8 @@
 					<li><span class="dc"><span class="fl">T</span>he <span class="fl">S</span>tealthy <span class="fl">T</span>hief</span> - a mysterious assassin who dispatches his foes from the shadows.</li>
 					<li><span class="dc"><span class="fl">T</span>he <span class="fl">M</span>ystical <span class="fl">W</span>izard</span> - able to bend the forces of the elements to his will.</li>
 				</ul>
-				<div id="teaser"><img width="320px" src="http://d12dnsmfbcrswq.cloudfront.net/rsrc/teaser.png" alt="Uh oh..." /></div>
-				<p><span class="dc"><span class="fl">C</span></span><span class="dc">ardinal <span class="fl">Q</span></span><span class="dc">uest</span> now in <b>available</b>!</p>
-					<p>Get the full game for only 6.95 Euros from <a href="http://www.littleindie.net/jade.php?showpage=cardinalquest">LittleIndie</a>!</p>
+				<div id="teaser"><img width=320 src="http://d12dnsmfbcrswq.cloudfront.net/rsrc/teaser.png" alt="Uh oh..." /></div>
+				<p><span class="dc"><span class="fl">C</span></span><span class="dc">ardinal <span class="fl">Q</span></span><span class="dc">uest</span> now in <b>available</b>:<br>Get it for only 6.95 Euros from <a href="http://www.littleindie.net/jade.php?showpage=cardinalquest">LittleIndie</a>!</p>
 <i>Cardinal Quest also runs on Mac and Linux - these versions will soon be available for download as well.</i>
 		   </div>
 		</div>
