website stuff (added fastspring)

--- a/website/index.html
+++ b/website/index.html
@@ -11,7 +11,7 @@
 <body>
 	<div id="page">
 	   <div id="contentArea">
-		   <div id="logo"><img width="120%" src="http://d12dnsmfbcrswq.cloudfront.net/rsrc/logo.png" alt="Cardinal Quest" /></div>
+		   <div id="logo"><img src="http://d12dnsmfbcrswq.cloudfront.net/rsrc/biglogo.png" alt="Cardinal Quest" /></div>
 		   <div id="leftContainer">
 			   <div id="vid">
 					<iframe width="425" height="349" src="http://www.youtube.com/embed/BWCoE8aXgks" frameborder="0" allowfullscreen></iframe>
@@ -76,7 +76,10 @@
 				<span class="dc"><span class="fl">C</span></span><span class="dc">ardinal <span class="fl">Q</span></span><span class="dc">uest</span> is an arcade-style dungeon-crawler inspired by 1980s classics such as Gauntlet, Red-Box D&amp;D and Golden Axe: Choose your champion and begin your quest to slay the Evil Minotaur!
 				</p>
 
-<p  style="text-align:center"><a  href="http://www.littleindie.net/jade.php?showpage=cardinalquest">Buy Now!</a></p>
+				<p><div style="text-align:center"><span class="dc"><span class="fl">B</span>uy <span class="fl">N</span>ow!</span></div>
+				<div><a href="http://sites.fastspring.com/tametick/product/cardinalquest">FastSpring</a> (Windows, Mac &amp; Linux)</div>
+				<div><a href="http://www.littleindie.net/jade.php?showpage=cardinalquest">LittleIndie</a>* (Windows)</div>
+			</p>
 				<p>Three distinct characters await you, each providing their own unique experience:</p>
 
 				<ul>
@@ -84,9 +87,16 @@
 					<li><span class="dc"><span class="fl">T</span>he <span class="fl">S</span>tealthy <span class="fl">T</span>hief</span> - a mysterious assassin who dispatches his foes from the shadows.</li>
 					<li><span class="dc"><span class="fl">T</span>he <span class="fl">M</span>ystical <span class="fl">W</span>izard</span> - able to bend the forces of the elements to his will.</li>
 				</ul>
+				<p>
 				<div id="teaser"><img width=320 src="http://d12dnsmfbcrswq.cloudfront.net/rsrc/teaser.png" alt="Uh oh..." /></div>
-				<p><span class="dc"><span class="fl">C</span></span><span class="dc">ardinal <span class="fl">Q</span></span><span class="dc">uest</span> now in <b>available</b>:<br>Get it for only 6.95 Euros from <a href="http://www.littleindie.net/jade.php?showpage=cardinalquest">LittleIndie</a>!</p>
-<i>Cardinal Quest also runs on Mac and Linux - these versions will soon be available for download as well.</i>
+				</p>
+				<p>
+				<div><span class="dc"><span class="fl">C</span></span><span class="dc">ardinal <span class="fl">Q</span></span><span class="dc">uest</span> is now <b>available</b>:</div>
+				<div><a href="http://sites.fastspring.com/tametick/product/cardinalquest">FastSpring</a> (Windows, Mac &amp; Linux)</div>
+				<div><a href="http://www.littleindie.net/jade.php?showpage=cardinalquest">LittleIndie</a>* (Windows)</div>
+
+				</p>
+<br>* <i style="font-size:0.8em">Cardinal Quest also runs on Mac and Linux - however these versions are not avaiable on LittleIndie.</i>
 		   </div>
 		</div>
    </div>
