web site tweaks and some config changes

--- a/website/index.html
+++ b/website/index.html
@@ -77,8 +77,7 @@
 				</p>
 
 				<p><div style="text-align:center"><span class="dc"><span class="fl">B</span>uy <span class="fl">N</span>ow!</span></div>
-				<div><a href="http://sites.fastspring.com/tametick/product/cardinalquest">FastSpring</a> (Windows, Mac &amp; Linux)</div>
-				<div><a href="http://www.littleindie.net/jade.php?showpage=cardinalquest">LittleIndie</a>* (Windows)</div>
+				<div><a href="http://sites.fastspring.com/tametick/product/cardinalquest">FastSpring</a> (Windows, Mac &amp; Linux*)</div>
 			</p>
 				<p>Three distinct characters await you, each providing their own unique experience:</p>
 
@@ -91,12 +90,11 @@
 				<div id="teaser"><img width=320 src="http://d12dnsmfbcrswq.cloudfront.net/rsrc/teaser.png" alt="Uh oh..." /></div>
 				</p>
 				<p>
-				<div><span class="dc"><span class="fl">C</span></span><span class="dc">ardinal <span class="fl">Q</span></span><span class="dc">uest</span> is now <b>available</b>:</div>
-				<div><a href="http://sites.fastspring.com/tametick/product/cardinalquest">FastSpring</a> (Windows, Mac &amp; Linux)</div>
-				<div><a href="http://www.littleindie.net/jade.php?showpage=cardinalquest">LittleIndie</a>* (Windows)</div>
-
+				<div><span class="dc"><span class="fl">C</span></span><span class="dc">ardinal <span class="fl">Q</span></span><span class="dc">uest</span> is <b>now available</b>:</div>
+				<div><a href="http://sites.fastspring.com/tametick/product/cardinalquest">Buy now</a> (Windows, Mac &amp; Linux*)</div>
 				</p>
-<br>* <i style="font-size:0.8em">Cardinal Quest also runs on Mac and Linux - however these versions are not avaiable on LittleIndie.</i>
+
+<p style="font-size:0.6">* The Linux version is still experimental- use at your own risk!</p>
 		   </div>
 		</div>
    </div>
