--- a/bin/index.html
+++ b/bin/index.html
@@ -3,31 +3,13 @@
 <head>
 	<title>Cardinal Quest</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta name="language" content="en" />
-	
-	<script src="js/swfobject.js" type="text/javascript"></script>
-	<script type="text/javascript">
-		var flashvars = {
-		};
-		var params = {
-			menu: "false",
-			scale: "noScale",
-			allowFullscreen: "true",
-			allowScriptAccess: "always",
-			bgcolor: "#FFFFFF"
-		};
-		var attributes = {
-			id:"cq-0.4"
-		};
-		swfobject.embedSWF("cq.swf", "altContent", 640, 480, "10", "expressInstall.swf", flashvars, params, attributes);
-	</script>
 
-	<link href='http://fonts.googleapis.com/css?family=Geo' rel='stylesheet' type='text/css'>
+<!--	<link href='http://fonts.googleapis.com/css?family=Geo' rel='stylesheet' type='text/css'> -->
 	<style type="text/css">
 		body { 
 			min-width: 640px;
 			background-color:#202020;
-			font-family: 'Geo', Helvetica, sans-serif;
+			font-family: Georgia, Helvetica, sans-serif;
 			color:#dddddd;
 		}
 		#wrapper {
@@ -37,22 +19,23 @@
 		}
 		h1 {
 			text-align:center;
-			font-family: 'Geo', Helvetica, sans-serif;
+			font-family: Georgia, Helvetica, sans-serif;
 		}
-		#subtitle {
-
-		}
+		a:link {color:#0080C0;}      /* unvisited link */
+		a:visited {color:#8080FF;}  /* visited link */
+		a:hover {color:#FFFF00;}  /* mouse over link */
+		a:active {color:#C0C0C0;}  /* selected link */
 	</style>
 </head>
 <body>
 	<div id="wrapper">
-		<h1>Cardinal Quest</h1>
-		<div id="altContent">
-			<p>Flash player not found!</p>
-			<p><a href="http://www.adobe.com/go/getflashplayer"><img 
-				src="http://www.adobe.com/images/shared/download_buttons/get_flash_player.gif" 
-				alt="Get Adobe Flash player" /></a></p>
-		</div>
+		<h1>Cardinal Quest Demo</h1>
+		<embed src="http://games.mochiads.com/c/g/cardinal-quest-demo/cq.swf" width="640" height="480">
+		<p>
+		Get the <a href="http://www.cardinalquest.com">full version</a>.
+		</p>
+		
+		<p>By <a href="mailto:ido.yehieli@gmail.com">Ido Yehieli</a>.</p>
 	</div>
 </body>
 </html>
