kong logo and preloader kinda working

--- a/kong-haxe/bin/index.html
+++ b/kong-haxe/bin/index.html
@@ -29,7 +29,7 @@
 </head>
 <body>
 	<div id="wrapper">
-		<h1>Cardinal Quest Demo</h1>
+		<h1>Cardinal Quest</h1>
 		<embed src="cq.swf" width="640" height="480">
 		<p>
 		Get the <a href="http://www.cardinalquest.com">full version</a>.
