--- a/website/index.html
+++ b/website/index.html
@@ -85,8 +85,9 @@
 				<div><span class="dc"><span class="fl">B</span>uy <span class="fl">N</span>ow!</span></div>
 <ul>
 For only <b>$4.45</b>!
-				<li><a href="http://sites.fastspring.com/tametick/product/cardinalquest">FastSpring</a> (Windows, Mac &amp; Linux*)</li>
-				<li><a href="https://secure.bmtmicro.com/servlets/Orders.ShoppingCart?CID=7038&PRODUCTID=70380000">BMTMicro</a> (Windows, Mac &amp; Linux*)</li>
+				<li><a href="https://secure.bmtmicro.com/servlets/Orders.ShoppingCart?CID=7038&PRODUCTID=70380000">BMTMicro</a> (Windows &amp; Mac)</li>
+				<li><a href="http://sites.fastspring.com/tametick/product/cardinalquest">FastSpring</a> (Windows &amp; Mac)</li>
+				<li><a href="http://www.gameolith.com/game/cardinal-quest/">Gameolith</a> (Linux)</li>
 </ul>
 				
 
@@ -112,11 +113,11 @@ For only <b>$4.45</b>!
 				<p>
 				<div><span class="dc"><span class="fl">C</span></span><span class="dc">ardinal <span class="fl">Q</span></span><span class="dc">uest</span> is now available For only <b>$4.45</b>!:</div>
 <ul>
-				<li>Buy on <a href="http://sites.fastspring.com/tametick/product/cardinalquest">FastSpring</a> (Windows, Mac &amp; Linux*)</li>
-				<li>Buy on <a href="https://secure.bmtmicro.com/servlets/Orders.ShoppingCart?CID=7038&PRODUCTID=70380000">BMTMicro</a> (Windows, Mac &amp; Linux*)</li>
+				<li>Buy on <a href="https://secure.bmtmicro.com/servlets/Orders.ShoppingCart?CID=7038&PRODUCTID=70380000">BMTMicro</a> (Windows &amp; Mac)</li>
+				<li>Buy on <a href="http://sites.fastspring.com/tametick/product/cardinalquest">FastSpring</a> (Windows &amp; Mac)</li>
+				<li>Buy on <a href="http://www.gameolith.com/game/cardinal-quest/">Gameolith</a> (Linux)</li>
 
 </ul>
-<p style="font-size:0.6">* The Linux version is still somewhat experimental!</p>
 		   </div>
 		</div>
    </div>
