commented out fastspring in index.html

--- a/website/index.html
+++ b/website/index.html
@@ -86,7 +86,7 @@
 <ul>
 For only <b>$4.45</b>!
 				<li><a href="https://secure.bmtmicro.com/servlets/Orders.ShoppingCart?CID=7038&PRODUCTID=70380000">BMTMicro</a> (Windows &amp; Mac)</li>
-				<li><a href="http://sites.fastspring.com/tametick/product/cardinalquest">FastSpring</a> (Windows &amp; Mac)</li>
+				<!--<li><a href="http://sites.fastspring.com/tametick/product/cardinalquest">FastSpring</a> (Windows &amp; Mac)</li>-->
 				<li><a href="http://www.gameolith.com/game/cardinal-quest/">Gameolith</a> (Linux)</li>
 </ul>
 				
@@ -114,7 +114,7 @@ For only <b>$4.45</b>!
 				<div><span class="dc"><span class="fl">C</span></span><span class="dc">ardinal <span class="fl">Q</span></span><span class="dc">uest</span> is now available For only <b>$4.45</b>!:</div>
 <ul>
 				<li>Buy on <a href="https://secure.bmtmicro.com/servlets/Orders.ShoppingCart?CID=7038&PRODUCTID=70380000">BMTMicro</a> (Windows &amp; Mac)</li>
-				<li>Buy on <a href="http://sites.fastspring.com/tametick/product/cardinalquest">FastSpring</a> (Windows &amp; Mac)</li>
+				<!--<li>Buy on <a href="http://sites.fastspring.com/tametick/product/cardinalquest">FastSpring</a> (Windows &amp; Mac)</li>-->
 				<li>Buy on <a href="http://www.gameolith.com/game/cardinal-quest/">Gameolith</a> (Linux)</li>
 
 </ul>
