not looking for text file if not stand alone (for FGL)

--- a/website/index.html
+++ b/website/index.html
@@ -79,8 +79,7 @@
 
 				<div><span class="dc"><span class="fl"><span class="fl">F</span>ree <span class="fl">D</span>emo!</span></div>
 <ul>
-				<li>Play the demo on <a href="http://www.kongregate.com/games/idoyehi/cardinal-quest-demo">Kongregate</a></li>
-				<li>Play the demo on <a href="http://www.cardinalquest.com/demo/">my site</a></li>
+				<li>Play the free edition on <a href="http://www.kongregate.com/games/idoyehi/cardinal-quest">Kongregate</a></li>
 </ul>
 				<div><span class="dc"><span class="fl">B</span>uy <span class="fl">N</span>ow!</span></div>
 <ul>
