--- a/website/demo/index.html
+++ b/website/demo/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta http-equiv="Refresh" content="0; url=http://www.kongregate.com/games/idoyehi/cardinal-quest" />
+</head>
+<body>
+<p>Please follow <a href="http://www.kongregate.com/games/idoyehi/cardinal-quest">this link</a>.</p>
+</body>
+</html>
+
+<!--
+<html>
+<head>
 	<title>Cardinal Quest</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
 <!--	<link href='http://fonts.googleapis.com/css?family=Geo' rel='stylesheet' type='text/css'> -->
+<!--
 	<style type="text/css">
 		body { 
 			min-width: 640px;
@@ -38,4 +49,4 @@
 		<p>By <a href="mailto:ido.yehieli@gmail.com">Ido Yehieli</a>.</p>
 	</div>
 </body>
-</html>
+</html>-->
