--- a/bin/index.html
+++ b/bin/index.html
@@ -30,7 +30,7 @@
 <body>
 	<div id="wrapper">
 		<h1>Cardinal Quest Demo</h1>
-		<embed src="http://games.mochiads.com/c/g/cardinal-quest-demo/cq.swf" width="640" height="480">
+		<embed src="cq.swf" width="640" height="480">
 		<p>
 		Get the <a href="http://www.cardinalquest.com">full version</a>.
 		</p>
