--- a/website/index.html
+++ b/website/index.html
@@ -83,7 +83,6 @@
 </ul>
 				<div><span class="dc"><span class="fl">B</span>uy <span class="fl">N</span>ow!</span></div>
 <ul>
-For only <b>$4.45</b>!
 				<li><a href="https://secure.bmtmicro.com/servlets/Orders.ShoppingCart?CID=7038&PRODUCTID=70380000">BMTMicro</a> (Windows &amp; Mac)</li>
 				<!--<li><a href="http://sites.fastspring.com/tametick/product/cardinalquest">FastSpring</a> (Windows &amp; Mac)</li>-->
 				<li><a href="http://www.gameolith.com/game/cardinal-quest/">Gameolith</a> (Linux)</li>
@@ -110,7 +109,7 @@ For only <b>$4.45</b>!
 				<div id="teaser"><img width=320 src="http://d12dnsmfbcrswq.cloudfront.net/rsrc/teaser.png" alt="Uh oh..." /></div>
 				</p>
 				<p>
-				<div><span class="dc"><span class="fl">C</span></span><span class="dc">ardinal <span class="fl">Q</span></span><span class="dc">uest</span> is now available For only <b>$4.45</b>!:</div>
+				<div><span class="dc"><span class="fl">C</span></span><span class="dc">ardinal <span class="fl">Q</span></span><span class="dc">uest</span> is now available!</div>
 <ul>
 				<li>Buy on <a href="https://secure.bmtmicro.com/servlets/Orders.ShoppingCart?CID=7038&PRODUCTID=70380000">BMTMicro</a> (Windows &amp; Mac)</li>
 				<!--<li>Buy on <a href="http://sites.fastspring.com/tametick/product/cardinalquest">FastSpring</a> (Windows &amp; Mac)</li>-->
