--- a/website/index.html
+++ b/website/index.html
@@ -73,16 +73,16 @@
 		  
 			<div id="rightContainer">
 				<div id="mino"><img src="http://d12dnsmfbcrswq.cloudfront.net/rsrc/minotaur.png" alt="Grrrr!" /></div>
-				<p>	
 				<span class="dc"><span class="fl">C</span></span><span class="dc">ardinal <span class="fl">Q</span></span><span class="dc">uest</span> is an arcade-style dungeon-crawler inspired by 1980s classics such as Gauntlet, Red-Box D&amp;D and Golden Axe: Choose your champion and begin your quest to slay the Evil Minotaur!
 				</p>
-
+				<p><b><a href="http://itunes.apple.com/app/cardinal-quest/id532050659">Cardinal Quest for iOS</a> is now out for iPhone, iTouch & iPad at the <a href="http://itunes.apple.com/app/cardinal-quest/id532050659">App Store</a>!</b></p>
 				<div><span class="dc"><span class="fl"><span class="fl">F</span>ree <span class="fl">D</span>emo!</span></div>
 <ul>
 				<li>Play the free edition on <a href="http://www.kongregate.com/games/idoyehi/cardinal-quest">Kongregate</a></li>
 </ul>
 				<div><span class="dc"><span class="fl">B</span>uy <span class="fl">N</span>ow!</span></div>
 <ul>
+				<li><a href="http://itunes.apple.com/app/cardinal-quest/id532050659">App Store</a> (iPhone, iTouch &amp; iPad)</li>
 				<li><a href="https://secure.bmtmicro.com/servlets/Orders.ShoppingCart?CID=7038&PRODUCTID=70380000">BMTMicro</a> (Windows &amp; Mac)</li>
 				<!--<li><a href="http://sites.fastspring.com/tametick/product/cardinalquest">FastSpring</a> (Windows &amp; Mac)</li>-->
 				<li><a href="http://www.gameolith.com/game/cardinal-quest/">Gameolith</a> (Linux)</li>
@@ -111,6 +111,7 @@
 				<p>
 				<div><span class="dc"><span class="fl">C</span></span><span class="dc">ardinal <span class="fl">Q</span></span><span class="dc">uest</span> is now available!</div>
 <ul>
+				<li>Buy on the <a href="http://itunes.apple.com/app/cardinal-quest/id532050659">App Store</a>(iPhone, iTouch &amp; iPad)</li>
 				<li>Buy on <a href="https://secure.bmtmicro.com/servlets/Orders.ShoppingCart?CID=7038&PRODUCTID=70380000">BMTMicro</a> (Windows &amp; Mac)</li>
 				<!--<li>Buy on <a href="http://sites.fastspring.com/tametick/product/cardinalquest">FastSpring</a> (Windows &amp; Mac)</li>-->
 				<li>Buy on <a href="http://www.gameolith.com/game/cardinal-quest/">Gameolith</a> (Linux)</li>
