added resources for scouts version

--- a/website/index.html
+++ b/website/index.html
@@ -75,7 +75,8 @@
 				<div id="mino"><img src="http://d12dnsmfbcrswq.cloudfront.net/rsrc/minotaur.png" alt="Grrrr!" /></div>
 				<span class="dc"><span class="fl">C</span></span><span class="dc">ardinal <span class="fl">Q</span></span><span class="dc">uest</span> is an arcade-style dungeon-crawler inspired by 1980s classics such as Gauntlet, Red-Box D&amp;D and Golden Axe: Choose your champion and begin your quest to slay the Evil Minotaur!
 				</p>
-				<p><b><a href="http://itunes.apple.com/app/cardinal-quest/id532050659">Cardinal Quest for iOS</a> is now out for iPhone, iTouch & iPad at the <a href="http://itunes.apple.com/app/cardinal-quest/id532050659">App Store</a>!</b></p>
+				<p><b><a href="http://itunes.apple.com/app/cardinal-quest/id532050659">Cardinal Quest for iOS</a> is now out for iPhone, iTouch &amp; iPad at the <a href="http://itunes.apple.com/app/cardinal-quest/id532050659">App Store</a>!</b></p>
+				<p><b><a href="https://play.google.com/store/apps/details?id=air.com.tametick.cardinalquest">Cardinal Quest for Android</a> is now out for phones &amp; tablets at the Google <a href="https://play.google.com/store/apps/details?id=air.com.tametick.cardinalquest">Play Market</a>!</b></p>
 				<div><span class="dc"><span class="fl"><span class="fl">F</span>ree <span class="fl">D</span>emo!</span></div>
 <ul>
 				<li>Play the free edition on <a href="http://www.kongregate.com/games/idoyehi/cardinal-quest">Kongregate</a></li>
@@ -83,6 +84,8 @@
 				<div><span class="dc"><span class="fl">B</span>uy <span class="fl">N</span>ow!</span></div>
 <ul>
 				<li><a href="http://itunes.apple.com/app/cardinal-quest/id532050659">App Store</a> (iPhone, iTouch &amp; iPad)</li>
+				<li><a href="https://play.google.com/store/apps/details?id=air.com.tametick.cardinalquest">Google Play</a> (Android phones &amp; tablets)</li>
+				<li><a href="http://www.amazon.com/gp/product/B008B8YYH8">Amazon App Store</a> (Android phones &amp; tablets)</li>
 				<li><a href="https://secure.bmtmicro.com/servlets/Orders.ShoppingCart?CID=7038&PRODUCTID=70380000">BMTMicro</a> (Windows &amp; Mac)</li>
 				<!--<li><a href="http://sites.fastspring.com/tametick/product/cardinalquest">FastSpring</a> (Windows &amp; Mac)</li>-->
 				<li><a href="http://www.gameolith.com/game/cardinal-quest/">Gameolith</a> (Linux)</li>
@@ -112,6 +115,8 @@
 				<div><span class="dc"><span class="fl">C</span></span><span class="dc">ardinal <span class="fl">Q</span></span><span class="dc">uest</span> is now available!</div>
 <ul>
 				<li>Buy on the <a href="http://itunes.apple.com/app/cardinal-quest/id532050659">App Store</a>(iPhone, iTouch &amp; iPad)</li>
+				<li>Buy on <a href="https://play.google.com/store/apps/details?id=air.com.tametick.cardinalquest">Google Play</a> (Android phones &amp; tablets)</li>
+				<li>Buy on <a href="http://www.amazon.com/gp/product/B008B8YYH8">Amazon App Store</a> (Android phones &amp; tablets)</li>
 				<li>Buy on <a href="https://secure.bmtmicro.com/servlets/Orders.ShoppingCart?CID=7038&PRODUCTID=70380000">BMTMicro</a> (Windows &amp; Mac)</li>
 				<!--<li>Buy on <a href="http://sites.fastspring.com/tametick/product/cardinalquest">FastSpring</a> (Windows &amp; Mac)</li>-->
 				<li>Buy on <a href="http://www.gameolith.com/game/cardinal-quest/">Gameolith</a> (Linux)</li>
